# tmdns

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.in  tmdns.spec  tmdns.spec.in
init.d/: Makefile.am  Makefile.in  init.DEBIAN  init.MANDRAKE  init.PYNIX  init.REDHAT  init.SUSE
scripts/: Makefile.am  Makefile.in  register-service.in
server/: Makefile.am  Makefile.in  conf.c  conf.h  config.h.in  debug.c  debug.h  dns.c  dns.h  getifaddrs.c  info.c  info.h  libnetlink.c  llist.c  llist.h  netlink_glue.c  netlink_glue.h  serv_udp.c  serv_udp.h  svc  tm_ifaddrs.h  tmdns.8  tmdns.c  tmdns.conf.5  tmdns.h  tmdns.services.5
